# HAGI_v2

./: .gitignore  README.md  pyproject.toml
.git_analysis/: V8-V18_FORENSIC_REPORT.md
configs/: 24gb_google.yaml  8gb_canonical.yaml  8gb_google.yaml  google.yaml  smollm2.yaml  v25_canonical.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_V23.md  ARCHITECTURE_V5.md  SHANNON_OPTIMAL_V6.md  rate_distortion_analysis.md  rate_distortion_analysis_ru.md
docs/superpowers/specs/: 2026-07-12-architecture-refactoring-design.md
scripts/: __init__.py  _train_utils.py  diagnose_channel_training.py  download_model.py  infer_v4.py  loss_bpt_parallel.py  loss_bpt_search.py  train_200.py  train_v4.py
src/hagi_v4/: __init__.py  config.py  version.py
src/hagi_v4/algebra/: __init__.py  clifford.py
src/hagi_v4/data/: __init__.py  dataset.py  sequential.py  tokenizer.py
src/hagi_v4/inference/: __init__.py  generate.py  kv_cache.py  spectral_cache.py  speculative.py
src/hagi_v4/model/: __init__.py  attention.py  attention_block.py  block.py  block_v25.py  bottleneck.py  bottleneck_v25.py  cast.py  clifford_cross_modal.py  codec_contracts.py  contrastive.py  conv_embedding.py  cqi.py  cross_modal_attention.py  cross_modal_gp2d.py  cross_modal_msa.py  exit_chart.py  freq_layer.py  gdr.py  geometric_enricher.py  gp2d.py  hagi_v4.py  hebbian_ffn.py  hrm.py  interleaver.py  kalman.py  lorentz.py  masking.py  model.py  moe.py  msa.py  multimodal.py  multimodal_input.py  multimodal_masking.py  multimodal_v25.py  multiscale_gp2d.py  norms.py  outputs.py  predictive.py  predictive_decoder.py  (+11 more)
src/hagi_v4/model/codec/: __init__.py  _utils.py  channel_decoder.py  channel_encoder.py  source_decoder.py  source_encoder.py
src/hagi_v4/research/: __init__.py  dataset.py
src/hagi_v4/train/: __init__.py  checkpoint.py  cli.py  distillation.py  foxp2.py  loop.py  losses.py  optim.py
