[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hagi-v4"
version = "0.4.0"
description = "HAGI V4 — Plane prediction SLM with Cl(3,0,0) geometric product 2D convolution"
requires-python = ">=3.12"
dependencies = ["numpy", "torch>=2.0", "pyyaml"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
hagi4-train = "hagi_v4.train.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
