[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hagi-v4"
version = "21.0.0"
description = "HAGI V21 — Shannon SCS codec LM with Cl(3,0,0) geometric algebra, Turbo BP decoder, Kalman tracking, water-filling capacity allocation"
requires-python = ">=3.12"
dependencies = ["numpy", "torch>=2.0", "pyyaml"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
